--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U postgres -d test_db -U postgres"
+          --health-cmd="pg_isready -U postgres -d test_db"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -29,28 +29,22 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Download Playwright browsers
+      - name: Install Playwright browsers
         run: playwright install --with-deps
 
-
-      - name: Install Playwright browsers
-        run: |
-          npx playwright install --with-deps
-
-      - name: Run pytest (unit & integration & E2E)
+      - name: Run pytest (unit / integration / E2E)
         env:
           TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
-          JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-          JWT_ALGORITHM: "HS256"
-        run: |
-          pytest --maxfail=1 --exitfirst
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          ALGORITHM: "HS256"
+        run: pytest --maxfail=1 --exitfirst
 
   build_and_push:
     needs: test
@@ -71,5 +65,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/module13_is601:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/module14_is601:latest
